# wuwa-mod-manager

./: README.md  STYLING_OPTIMIZATIONS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-tauri.yml
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/services/: category.rs  character.rs  game.rs  mod.rs  mod_service.rs  preset.rs
src/assets/: categories.json
src/components/: Filter.tsx  Header.tsx  ModCard.tsx  ModGrid.tsx  ModInfoPanel.tsx  NavBar.tsx  Preset.tsx  Spinner.tsx  StatusButton.tsx
src/constants/: categories.constant.tsx  styling.constant.tsx
src/hooks/: loadingHook.tsx
src/interfaces/: Category.interface.tsx  Character.interface.tsx  Mod.interface.tsx  Preset.interface.tsx
src/services/: category.service.ts  character.service.ts  folder.service.tsx  game.service.tsx  image.service.ts  mod.service.tsx  modService.tsx  preset.service.tsx
src/utils/: loadingControls.tsx
