[package]
name = "wuwa_mod_manager"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "z"   # Prioritizes smallest binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wuwa_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6" }

[dependencies]
tauri = { version = "2.11.0" }
tauri-plugin-opener = "2.5.3"
tauri-plugin-clipboard-manager = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
reqwest = { version = "0.13.3", features = [
    "json",
    "stream",
    "gzip",
    "deflate",
] }
zip = "8.6.0"
base64 = "0.22.1"
regex = "1.12.3"
enigo = "0.6.1"
uuid = { version = "1.23.1", features = ["v4"] }
futures-util = "0.3.32"
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio = { version = "1.52.1", features = ["full"] }
scraper = "0.26.0"
